# kiro-mcp-servers

./: .gitignore  Makefile  README.md  local_mac_test.sh  pyproject.toml
.github/workflows/: ci.yml  integration.yml
servers/chrome-tabs/: package.json  tab_picker.py
servers/kiro-agents/: dashboard.sh  pyproject.toml  server.py
servers/kiro-agents/tests/: conftest.py  test_server.py
servers/kiro-checkpoint/: pyproject.toml  server.py
servers/kiro-checkpoint/tests/: test_server.py
servers/mcp-proxy/: mcp_proxy.py  pyproject.toml
servers/mcp-proxy/tests/: test_proxy.py
tests/integration/: test_install.py
