[project]
name = "kiro-agents"
version = "0.1.0"
description = "Kiro Agents MCP server — orchestrates parallel investigations"
requires-python = ">=3.10"
dependencies = ["mcp[cli]>=1.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
kiro-agents = "server:main"
