[project]
name = "mcp-proxy"
version = "0.1.0"
description = "Transparent JSON-RPC proxy with hot-reload for MCP servers"
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
mcp-proxy = "mcp_proxy:main"
